# ai-runtime-platform

./: .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  README.md  SECURITY.md  pyproject.toml
.github/: dependabot.yml
.github/workflows/: ci.yaml  release.yaml
app/cli/: replay.py
app/gateway/: decisions.py  evaluations.py  governance.py  identity.py  intent.py  jwt_verify.py  main.py  mcp.py  tenant.py
app/gateway/tests/: conftest.py  test_evaluations.py  test_governance.py  test_identity.py  test_intent.py  test_main.py  test_mcp.py  test_tenant.py  test_wow_pack.py
charts/vllm-runtime/: Chart.yaml  values.yaml
charts/vllm-runtime/templates/: _helpers.tpl  deployment.yaml  service.yaml  servicemonitor.yaml
deploy/base/: configmap.yaml  gateway.yaml  kustomization.yaml  namespace.yaml  networkpolicy.yaml  poddisruptionbudget.yaml  serviceaccount.yaml
deploy/canary/: vllm-rollout.yaml
deploy/keda/: vllm-scaledobject.yaml
deploy/kserve/: qwen-inferenceservice.yaml
deploy/local/: README.md  docker-compose.canary.yaml  docker-compose.chaos.yaml  docker-compose.cost-aware.yaml  docker-compose.fallback.yaml  docker-compose.shared-state.yaml  docker-compose.yaml
deploy/observability/: gateway-dashboard.yaml  gateway-servicemonitor.yaml  grafana-dashboard.yaml  otel-collector.yaml
docs/: architecture.md  demo-flow.md  portfolio-overview.md  runtime-decision-engine.md  runtime-enforcement-mode.md
experiments/canary-analysis/: README.md  analyze.py  sample_metrics.csv
experiments/canary-analysis/results/: example_report.json
experiments/canary-analysis/tests/: test_analyze.py
gitops/argocd/: application.yaml
loadtest/: chat-completions.js
